@@ -78,8 +78,8 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
-						<source>1.5</source>
-						<target>1.5</target>
+						<source>1.4</source>
+						<target>1.4</target>
 					</configuration>
 				</plugin>
 				<plugin>
